--- a/index.html
+++ b/index.html
@@ -5,10 +5,91 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Cime Reservation</title>
+    <title>Cinema Reservation</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="screen"></div>
+        <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat reserved"></div>
+            <div class="seat reserved"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+        </div>
+        <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+        </div>
+        <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat reserved"></div>
+            <div class="seat reserved"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+        </div>
+        <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+        </div>
+        <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+        </div>
+    </div>
+
+    <div class="movie-list">
+        <select id="movie">
+            <option disabled>Film seçiniz</option>
+            <option value="20">movie 1</option>
+            <option value="22">movie 2</option>
+            <option value="25">movie 3</option>
+        </select>
+    </div>
+
+    <ul class="info">
+        <li>
+            <div class="seat selected information"></div>
+            <small>Seçili</small>
+        </li>
+        <li>
+            <div class="seat information"></div>
+            <small>Boş</small> 
+        </li>
+        <li>
+            <div class="seat reserved information"></div>
+            <small>Dolu</small>
+        </li>
+    </ul>
+
+    <p class="text">
+        <span id="count">3</span> adet bilet için hesaplanan ücret <span id="amount">60</span> TL.
+    </p>
+
     <script src="script.js"></script>
 </body>
 </html>
